...
      <ThemedView>
        {imageSrc && <Image style={styles.image} source={{ uri: imageSrc }} />}
      </ThemedView>
      <ThemedView style={styles.productInfo}>
        <ThemedText style={styles.name}>{name}</ThemedText>
        <ThemedText style={styles.price}>$ {price}</ThemedText>
        <Pressable testID="product-add-to-cart" style={styles.add} onPress={onClickAdd}>
          <ThemedText style={styles.addText}>Add to Cart</ThemedText>
        </Pressable>
      </ThemedView>
    </ThemedView>
  );
};
...
