...
        },
      });

      Toast.show({
        type: "success",
        position: "bottom",
        text1: "Your order is Complete!",
        text2: "We've sent you a confirmation email.",
      });

      router.replace("/");
    },
    [placeOrder],
...
              <ThemedText style={styles.bold}>{item.quantity}</ThemedText>
            </ThemedView>
          ))}
        </ThemedScrollView>
      </ThemedView>
      <ThemedView style={styles.emptyCartContainer}>
        <Pressable testID="cart-empty" style={styles.emptyCart} onPress={onEmptyCart}>
          <ThemedText style={styles.emptyCartText}>Empty Cart</ThemedText>
        </Pressable>
      </ThemedView>
      <CheckoutForm onSubmit={onPlaceOrder} />
    </ThemedView>
  );
...
