...
            keyboardType="numeric"
          />
        )}
        name="creditCardCvv"
      />
      <ThemedView style={styles.submitContainer}>
        <Pressable testID="checkout-place-order" style={styles.submit} onPress={handleSubmit(onSubmit)}>
          <ThemedText style={styles.submitText}>Place Order</ThemedText>
        </Pressable>
      </ThemedView>
    </ThemedScrollView>
  );
};
...
